@@ -34,6 +34,8 @@ Features
  * Allow triggering services from the UI.
  * Show a hint to project maintainers, when he/she is not a package maintainer of
    the target package of a request
+ * multibuild: allow to build multiple jobs from one source package without the need
+               of creating local links
 
 Wanted changes:
 ===============
